update utopia file

--- a/.utopia.yml
+++ b/.utopia.yml
@@ -1,10 +1,7 @@
 features:
-  - name: eslint
-    description: lint your project with eslint
+  eslint:
     branch: utopia/eslint
-  - name: prettier
-    description: format your project with prettier
+  prettier:
     branch: utopia/prettier
-  - name: auth
-    description: basic cookie based authentication
+  auth:
     branch: utopia/auth
